Background Image in 3D view increases memory usage. Crashes Blender #47577

Closed
opened 2016-02-26 06:03:23 +01:00 by david mcsween · 10 comments

System Information
Operating system and graphics card
Win 7 SP1 i5 8GB AMD Radeon HD7470
Blender Version
Broken: 2.4 - 2.76
Worked: ??

Short description of error
Background Image movie clip still image eats memory fast
eventually crashes Blender

Exact steps for others to reproduce the error
Place a movie clip (still image) or jpeg in the Background Image window of 3D view.
Scrub timeline back and forward
watch memory usage at top add up to GB quickly{F285870}

**System Information** Operating system and graphics card Win 7 SP1 i5 8GB AMD Radeon HD7470 **Blender Version** Broken: 2.4 - 2.76 Worked: ?? **Short description of error** Background Image movie clip still image eats memory fast eventually crashes Blender **Exact steps for others to reproduce the error** Place a movie clip (still image) or jpeg in the Background Image window of 3D view. Scrub timeline back and forward watch memory usage at top add up to GB quickly{[F285870](https://archive.blender.org/developer/F285870/test_mem.blend)}
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @davidmcsween

Added subscriber: @davidmcsween
Author

Have just realized that the Movie Clip still image didn't "pack".
So the still image that is packed needs to be exported and loaded as a Movie Clip in the MCE.
Then you load it as a Movie Clip (still image) in the Background image.

Have just realized that the Movie Clip still image didn't "pack". So the still image that is packed needs to be exported and loaded as a Movie Clip in the MCE. Then you load it as a Movie Clip (still image) in the Background image.
Author

It seems that the background Image is not the problem.

I experience the same memory issue when scrubbing a still image (not a movie or sequence) in the MCE.
The large jpeg I am using seems to persist for for than one frame. Other images (.png) do not, they only appear for 1 frame.
This doesn't happen with smaller jpegs or other image formats.

In Footage Information of MCE "frame: -/1" still appears but the image continues to prefetch into memory even when it should be unavailable.

Jpeg images over 2.5mb seem to fail consistently.

It seems that the background Image is not the problem. I experience the same memory issue when scrubbing a still image (not a movie or sequence) in the MCE. The large jpeg I am using seems to persist for for than one frame. Other images (.png) do not, they only appear for 1 frame. This doesn't happen with smaller jpegs or other image formats. In Footage Information of MCE "frame: -/1" still appears but the image continues to prefetch into memory even when it should be unavailable. Jpeg images *over* 2.5mb seem to fail consistently.
Author

Other people have tried to replicate the effect but cannot get a still to load more than 1 frame. I have downloaded a new build today and still experience the MCE problem. Building moer frames than required.

Other people have tried to replicate the effect but cannot get a still to load more than 1 frame. I have downloaded a new build today and still experience the MCE problem. Building moer frames than required.
Author

The memory issue occurs whenever there is a failedstill Movie Clip being drawn on screen. 3d view , compositor node or MCE.

The memory issue occurs whenever there is a *failed*still Movie Clip being drawn on screen. 3d view , compositor node or MCE.

Added subscriber: @mont29

Added subscriber: @mont29
Sergey Sharybin was assigned by Bastien Montagne 2016-02-26 10:35:06 +01:00

Yes, there is something odd going on with jpeg files in MCE (any jpeg file?), keeping displaying the same image on all frames…

Yes, there is something odd going on with jpeg files in MCE (any jpeg file?), keeping displaying the same image on all frames…

This issue was referenced by 647a4ea2f7

This issue was referenced by 647a4ea2f7a057159aae29d875e20db2809b563b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47577
No description provided.