Fix T47577: Movie clip uses too much memory with still image sequences